# arosrobot

./: .lidar_setup.txt.swp  .rosinstall  .rosinstall.bak  lidar_setup.txt  lines.py  noise_points.py  output_topic.txt  setup-agx.txt  setup.txt  setup_guide_agx.txt
Azure_Kinect_ROS_Driver/: CMakeLists.txt
Azure_Kinect_ROS_Driver/launch/: azure.launch  driver.launch
arosrobot/Azure_Kinect_ROS_Driver/launch/: driver.launch
arosrobot/arosrobot_base/: CMakeLists.txt  package.xml
arosrobot/arosrobot_base/cfg/: Talon.cfg
arosrobot/arosrobot_base/msg/: MotorStatus.msg
arosrobot/arosrobot_base/src/: .TalonEncoder.cpp.swp  RosControl.cpp  TalonNode.cpp
arosrobot/arosrobot_base/srv/: Reset.srv
arosrobot/arosrobot_bringup/: package.xml
arosrobot/arosrobot_control/: CMakeLists.txt  package.xml
arosrobot/arosrobot_control/config/: localization.yaml
arosrobot/arosrobot_description/: package.xml
arosrobot/arosrobot_description/launch/: display.launch
arosrobot/arosrobot_description/meshes/: wheel.dae
arosrobot/arosrobot_description/urdf/: arosrobot.urdf.xacro  wheels.urdf.xacro
arosrobot/arosrobot_gazebo/: package.xml
arosrobot/arosrobot_gazebo/launch/: orchard_world.launch
arosrobot/arosrobot_joy/: CMakeLists.txt  package.xml
arosrobot/arosrobot_joy/launch/: teleop.launch
arosrobot/arosrobot_joy/src/: arosrobot_joy.cpp
arosrobot/arosrobot_joy/test/: differential_joy.test  turbo_angular_enable_joy.test  (+1 more)
arosrobot/arosrobot_key/: CMakeLists.txt
arosrobot/arosrobot_rviz/: package.xml
arosrobot/arosrobot_rviz/rviz/: robot.rviz  robot_map.rviz
arosrobot/velodyne/: lidar_setup.txt
arosrobot_base/Phoenix-Linux-SocketCAN-Example/: example.cpp  example2.cpp
arosrobot_base/launch/: hw_control.launch
arosrobot_base/msg/: MotorAngle.msg  MotorControl.msg
arosrobot_base/src/: MotorControl.cpp
arosrobot_bringup/: CMakeLists.txt
arosrobot_bringup/launch/: boot.launch
arosrobot_control/config/: amcl_localization.yaml  control.yaml  gazebo_control.yaml  gazebo_gps_localization.yaml  navsat_localization.yaml
arosrobot_control/launch/: gazebo_gps_localization.launch  gazebo_slam_localization.launch  local_localization.launch  navsat_localization.launch
arosrobot_description/: CMakeLists.txt
arosrobot_description/rviz/: urdf.rviz
arosrobot_description/urdf/: azure_camera.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro
arosrobot_gazebo/: CMakeLists.txt
arosrobot_gazebo/launch/: clearpath_world.launch  empty_world.launch
arosrobot_gazebo/urdf/: orchard_geometry.urdf.xacro
arosrobot_joy/src/: teleop_node.cpp
arosrobot_joy/test/: only_turbo_joy.test  test_joy_twist.py  turbo_enable_joy.test
arosrobot_key/: package.xml  setup.py
arosrobot_key/launch/: arosrobot_teleop_key.launch
arosrobot_navigation/: CMakeLists.txt  package.xml
arosrobot_navigation/config/: controllers.yaml  costmap_common.yaml  costmap_global_static.yaml
arosrobot_navigation/launch/: base_flex.launch  hybrid_localization.launch  map_server.launch  move_base.launch  navigate_amcl.launch
arosrobot_navigation/maps/: real_orchard_1.yaml
arosrobot_rviz/: CMakeLists.txt
arosrobot_rviz/launch/: rosbag_view.launch  view_robot.launch
arosrobot_rviz/rviz/: robot2.rviz
arosrobot_sensor_bringup/: CMakeLists.txt  package.xml
arosrobot_sensor_bringup/launch/: sensor_boot.launch
carrot_planner/: CMakeLists.txt
carrot_planner/path/: path.txt
carrot_planner/src/: carrot_planner (copy).cpp  carrot_planner.cpp  carrot_planner_orig.cpp
follow_waypoints/launch/: follow_waypoints.launch
icerobot/icerobot_base/: CMakeLists.txt  package.xml
icerobot/icerobot_base/cfg/: Talon.cfg
icerobot/icerobot_base/include/icerobot_base/: RosControl.h  TalonNode.h
icerobot/icerobot_base/launch/: hw_config.yaml  hw_control.launch
icerobot/icerobot_base/src/: MotorControl.cpp  RosControl.cpp  TalonNode.cpp
icerobot/icerobot_bringup/: CMakeLists.txt  package.xml
icerobot/icerobot_control/: CMakeLists.txt  package.xml
icerobot/icerobot_description/: CMakeLists.txt  package.xml
icerobot/icerobot_gazebo/: CMakeLists.txt  package.xml
icerobot/icerobot_gmapping/: CMakeLists.txt  package.xml
icerobot/icerobot_joy/: CMakeLists.txt  package.xml
icerobot/icerobot_key/: CMakeLists.txt  package.xml  setup.py
icerobot/icerobot_key/launch/: .icerobot_teleop_key.launch.swp  icerobot_teleop_key.launch
icerobot/icerobot_key/src/: icerobot_teleop_key
icerobot/icerobot_mapviz/: CMakeLists.txt  package.xml
icerobot/icerobot_navigation/: CMakeLists.txt  package.xml
icerobot/icerobot_rviz/: CMakeLists.txt  package.xml
icerobot/icerobot_sensor_bringup/: CMakeLists.txt  package.xml
icerobot/icerobot_teleop/: CMakeLists.txt  package.xml  setup.py
icerobot/icerobot_teleop/config/: gazebo_interface.yaml
icerobot/icerobot_teleop/launch/: icerobot_teleop_key.launch  ps3_teleop.launch
icerobot/icerobot_teleop/src/: icerobot_teleop_key
icerobot/mbf_smach/: CMakeLists.txt  package.xml
icerobot_planner/: CMakeLists.txt  package.xml
icerobot_planner/src/: path_exec.cpp
laser_assembler/examples/: periodic_snapshotter.cpp
laser_assembler/launch/: laser_assembler.launch  point_cloud_assembler.launch
laserscan_to_pointcloud/launch/: octomapper.launch
ros_phoenix/: CMakeLists.txt  package.xml
ros_phoenix/cfg/: Talon.cfg
ros_phoenix/config/: icerobot_common.yaml
ros_phoenix/include/ros_phoenix/: .TalonNode.h.swp  RosControl.h  TalonNode.h
ros_phoenix/launch/: hw_control.launch  test_frame.launch  test_frame.yaml
ros_phoenix/src/: MotorControl.cpp  RosControl.cpp  TalonNode.cpp
rplidar_ros/config/: laser_params.yaml
rplidar_ros/launch/: rplidar_s1.launch
talon_controller_vel/: CMakeLists.txt  package.xml
talon_controller_vel/cfg/: Talon.cfg
talon_controller_vel/launch/: test_frame.launch  test_frame.yaml
talon_controller_vel/src/: CmdExmaple.cpp  MotorControl.cpp  TalonNode.cpp
time_tutorial/: CMakeLists.txt  package.xml
time_tutorial/scripts/: time.py
um7_imu/: CMakeLists.txt  package.xml
vision_opencv/cv_bridge/: CMakeLists.txt
(+127 files in other folders)
