<?xml version="1.0"?>
<package format="2">
  <name>arosrobot_description</name>
  <version>0.0.0</version>
  <description>The arosrobot_description package</description>

  <maintainer email="cesar-desktop@todo.todo">cesar-desktop</maintainer>

  <license>TODO</license>
	  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
