<?xml version="1.0"?>
<package format="2">
  <name>arosrobot_gazebo</name>
  <version>0.0.0</version>
  <description>The arosrobot_gazebo package</description>
  <maintainer email="cesar-desktop@todo.todo">cesar-desktop</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>arosrobot_teleop</exec_depend>
  <exec_depend>arosrobot_description</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
