<?xml version="1.0"?>
<package format="2">
  <name>arosrobot_rviz</name>
  <version>0.0.0</version>
  <description>The arosrobot_rviz package</description>

  <maintainer email="cesar-asus@todo.todo">cesar-asus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>arosrobot_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <export>

  </export>
</package>
