<?xml version="1.0"?>
<package format="2">
  <name>icerobot_teleop</name>
  <version>0.0.0</version>
  <description>The package</description>

  <maintainer email="cesar-desktop@todo.todo">cesar-desktop</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>icerobot_description</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>steer_drive_controller</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>

</package>
